--- a/client/public/subfiles/main.css
+++ b/client/public/subfiles/main.css
@@ -30,21 +30,20 @@
     width: 61%;
     float: left;
     margin-left: 3%;
-    margin-top: 50px;
+    margin-top: 10vh;
     margin-right: 3%; 
 }
 
 .friend_container{
     width: 30%;
     margin-right: 3%;
-    border: solid 1px black;
-    margin-top: 50px;
     border-radius: 10px;
-    padding: 10px;
-    height: 80vh;
+    padding: 0 10px 10px 10px;
+    height: 75vh;
     overflow: auto;
     position: sticky;
-    top: calc(10vh + 50px);
+    top: 20vh;
+    float: left;
 }
 
 nav{
@@ -61,8 +60,8 @@ nav{
 }
 
 .profile_pic{
-    width: 7vh;
-    height: 7vh;
+    width: 50px;
+    height: 50px;
     border: 1px solid black;
     border-radius: 50%;
     margin: auto;
@@ -84,32 +83,32 @@ h1{
 
 
 
-.box_search input {
-    position: fixed;
-    transition: 1s;
-    width: 100px;
-    right: 60%;
-    border: none;
-    background-color: beige;
+.box_search{
+    position:relative;
 }
 
-.box_search:hover input{
-    position: relative;
+.s_input{
+    width: 100px;
+    background: none;
+    border: none;
+    transition: .5s;
+}
+
+.box_search:hover .s_input{
     width: 250px;
+    background: white;
     border-radius: 10px;
-    display: block;
-    right: 0;
-    background-color: white;
-    border: 1px solid gray;
 }
 
 .box_search p{
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    transition: .2s;
 }
 
 .box_search:hover p{
-    position: absolute;
     opacity: 0;
     z-index: -1;
-    
 }
