--- a/client/public/subfiles/friend.css
+++ b/client/public/subfiles/friend.css
@@ -8,6 +8,6 @@
     display: inline-flex;
     margin-bottom: 15px;
     border-radius: 10px;
-    background-color: rgb(245, 245, 245);
+    background-color: #3A4750;
     padding: 10px;
 }
