--- a/client/public/subfiles/post.css
+++ b/client/public/subfiles/post.css
@@ -10,7 +10,7 @@
     border-radius: 10px;
     padding: 10px;
     text-align: left;
-    background-color: #3A4750;
+    background-color: #f8f8f8;
 }
 
 .profile_pic{
@@ -25,12 +25,62 @@
 .user{
     font-weight: bold;
     font-family: 'Bungee';
+    color: #33CCCC;
 }
 
 .interaction{
     background-color: #303841;
     border: none;
-    border-radius: 10px;
-    text-align: center;
-    margin: 10px;
+    height: 40px;
+    margin: 0 7%;
+}
+
+.like_button{
+    background: transparent url(picture/like.png) no-repeat center;
+    background-size: 90%;
+}
+
+.like_button:hover{
+    background: transparent url(gif/like.gif) no-repeat center;
+    background-size: 90%;
+}
+
+.dislike_button{
+    background: transparent url(picture/dislike.png) no-repeat center;
+    background-size: 90%;
+}
+
+.dislike_button:hover{
+    background: transparent url(gif/dislike.gif) no-repeat center;
+    background-size: 90%;
+}
+
+.comment_button{
+    background: transparent url(picture/comment.png) no-repeat center;
+    background-size: 90%;
+}
+
+.comment_button:hover{
+    background: transparent url(gif/comment.gif) no-repeat center;
+    background-size: 90%;
+}
+
+.share_button{
+    background: transparent url(picture/share.png) no-repeat center;
+    background-size: 90%;
+}
+
+.share_button:hover{
+    background: transparent url(gif/share.gif) no-repeat center;
+    background-size: 90%;
+}
+
+.save_button{
+    background: transparent url(picture/save.png) no-repeat center;
+    background-size: 90%;
+}
+
+.save_button:hover{
+    background: transparent url(gif/save.gif) no-repeat center;
+    background-size: 90%;
 }
