--- a/client/public/subfiles/profile.css
+++ b/client/public/subfiles/profile.css
@@ -10,7 +10,7 @@
     border-radius: 10px;
     padding: 10px;
     text-align: left;
-    background-color: #3A4750;
+    background-color: #ffffff;
 }
 
 .col2{
