Beige och ikoner

--- a/client/public/subfiles/friend.css
+++ b/client/public/subfiles/friend.css
@@ -8,7 +8,7 @@
     display: inline-flex;
     margin-bottom: 15px;
     border-radius: 10px;
-    background-color: #33CCCC;
+    background-color: #ddcfbf;
     padding: 10px;
 }
 
