--- a/client/public/subfiles/profile.css
+++ b/client/public/subfiles/profile.css
@@ -63,3 +63,60 @@
     background-color: #f8f8f8;;
     padding-left: 10px;
 }
+
+.interactionp{
+    background-color:#f8f8f8;
+    border: none;
+    height: 40px;
+    margin: 0 4%;
+}
+
+.like_buttonp{
+    background: transparent url(picture/like.png) no-repeat center;
+    background-size: 90%;
+}
+
+.like_buttonp:hover{
+    background: transparent url(gif/like.gif) no-repeat center;
+    background-size: 90%;
+}
+
+.dislike_buttonp{
+    background: transparent url(picture/dislike.png) no-repeat center;
+    background-size: 90%;
+}
+
+.dislike_buttonp:hover{
+    background: transparent url(gif/dislike.gif) no-repeat center;
+    background-size: 90%;
+}
+
+.comment_buttonp{
+    background: transparent url(picture/comment.png) no-repeat center;
+    background-size: 90%;
+}
+
+.comment_buttonp:hover{
+    background: transparent url(gif/comment.gif) no-repeat center;
+    background-size: 90%;
+}
+
+.share_buttonp{
+    background: transparent url(picture/share.png) no-repeat center;
+    background-size: 90%;
+}
+
+.share_buttonp:hover{
+    background: transparent url(gif/share.gif) no-repeat center;
+    background-size: 90%;
+}
+
+.save_buttonp{
+    background: transparent url(picture/save.png) no-repeat center;
+    background-size: 90%;
+}
+
+.save_buttonp:hover{
+    background: transparent url(gif/save.gif) no-repeat center;
+    background-size: 90%;
+}
