--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,3 +1,19 @@
-.nav-brand {
+.navbar {
+  height: 5em;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #333;
+}
 
+.navbar .nav-brand {
+  color: #eee;
+}
+
+.link {
+  color: #eee;
+}
+
+.link:hover {
+  color: lightblue;
 }
