--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,7 +30,7 @@ code {
 .friend-feed {
   width: 30%;
   border-radius: 10px;
-  height: 75vh;
+  height: 60%;
   overflow: auto;
   position: fixed;
   right: 3%;
