--- a/client/src/components/Profile/Profile.module.css
+++ b/client/src/components/Profile/Profile.module.css
@@ -4,31 +4,31 @@
   box-sizing: border-box;
 }
 
-.friend-container {
+.profile_container {
   display: inline-flex;
   margin-bottom: 15px;
   border-radius: 10px;
   background-color: #eee;
   width: 100%;
-  max-height: 7.5em;
-  min-height: 7.5em;
   padding: 10px;
 }
 
-.friend-container .profile-pic {
+.profile_pic {
   border: black solid 1px;
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  margin: 0 auto auto auto;
-  margin-top: 10px;
+  min-width: 50px;
+  aspect-ratio: 1/1;
+  margin: 10px auto auto auto;
 }
 
-.friend-container .friend-info {
+.profile_info {
   padding: 10px;
-  margin-left: 10px;
 }
 
-.friend p {
+.username {
+  color: grey;
+}
+
+.profile p {
   color: #f8f8f8;
 }
