navbar link distance

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -12,6 +12,7 @@
 
 .link {
   color: #eee;
+  margin-top: 3.7%;
 }
 
 .link:hover {
@@ -20,6 +21,7 @@
 
 .box_search{
   position:relative;
+  margin-top: auto;
 }
 
 .s_input{
