--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,12 +27,17 @@ code {
   border-radius: 10px;
 }
 
-.friend-feed {
+.right {
   width: 30%;
   border-radius: 10px;
-  height: 60%;
-  overflow: auto;
+  height: 80%;
   position: fixed;
   right: 3%;
   top: 10em;
+}
+
+.user-feed {
+  overflow: auto;
+  width: 100%;
+  height: 80%;
 }
