--- a/client/src/pages/MyProfile.css
+++ b/client/src/pages/MyProfile.css
@@ -37,6 +37,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 50%;
+  z-index: 10;
 }
 
 .profile-pic-color {
