--- a/client/src/components/Modal/Modal.css
+++ b/client/src/components/Modal/Modal.css
@@ -64,6 +64,7 @@
   line-height: 25px;
   text-align: center;
   color: rgb(0, 0, 0);
+  cursor: pointer;
 }
 
 .close:hover,
@@ -78,26 +79,13 @@
 }
 
 .text {
-  margin-top: 0%;
-  margin-bottom: 5%;
-  margin-right: 0%;
+  margin: 0 15%;
   background-color: rgb(239, 238, 238);
   width: 70%;
   height: 200px;
   border-color: rgb(239, 238, 238);
   border-radius: 10px;
   border-width: 10px;
-  margin-left: 5%;
   font-size: large;
   color: black;
-}
-
-.profile {
-  border: solid 1px black;
-  border-radius: 50%;
-  width: 70px;
-  height: 70px;
-  margin-left: 10%;
-  float: left;
-  margin-right: 0%;
 }
