--- a/client/src/pages/Search.module.css
+++ b/client/src/pages/Search.module.css
@@ -1,10 +1,6 @@
-.container {
-  display: grid;
-  grid-template-columns: repeat(
-    auto-fill,
-    minmax(30vw, 1fr)
-  ); /* Adjust 300px to your desired width */
-  grid-gap: 20px; /* Adjust the gap between grid items */
-
-  margin: 7em 3% 0 3%;
+.usersContainer {
+  border: solid 1px red;
+  width: 100%;
+  height: 90vh;
+  margin-top: 5em;
 }
