--- a/client/src/pages/MyProfile.css
+++ b/client/src/pages/MyProfile.css
@@ -50,14 +50,10 @@
   border: solid 2px black;
 }
 
-.profile-pic-color:hover {
-  cursor: pointer;
-}
-
 .change-color {
   position: absolute;
   width: 100;
-  margin: auto 0;
+  margin: auto;
   opacity: 0;
   transition: opacity 0.3s ease;
   cursor: pointer;
@@ -95,7 +91,7 @@
   top: 10em;
   width: 30%;
   margin-right: 3%;
-  height: 97%;
+  height: 90%;
   overflow: auto;
 }
 
