--- a/client/src/pages/MyProfile.css
+++ b/client/src/pages/MyProfile.css
@@ -25,6 +25,10 @@
   min-height: 100%;
   max-width: 30%;
   background-color: transparent;
+  display:grid ;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .profile-pic-container {
