--- a/client/src/pages/MyProfile.css
+++ b/client/src/pages/MyProfile.css
@@ -54,6 +54,12 @@
   border: solid 2px black;
 }
 
+.picker{
+  cursor: pointer;
+  background-color: #adadad;
+  border: none;
+}
+
 .change-color {
   position: absolute;
   width: 100;
@@ -106,4 +112,23 @@
 .myProfile-page {
   margin-top: 10vh;
   padding-top: 10vh;
+}
+
+.save{
+  height: 10%;
+  margin: 0 25%;
+  border-radius: 10px;
+  width: 50%;
+  box-shadow: none;
+  background-color: #333;
+  border: none;
+  font-size: x-large;
+  font-weight: bold;
+  text-align: center;
+  padding: none;
+  color: lightblue;
+}
+
+.save:hover{
+  background-color: rgb(96, 96, 96);
 }
