--- a/client/src/components/Modal/Modal.css
+++ b/client/src/components/Modal/Modal.css
@@ -45,26 +45,10 @@
 
 .headtext {
   font-weight: bold;
-  font-family: "Bungee";
   color: #000000;
   font-size: 200%;
   margin: auto;
   margin-top: 5%;
-}
-
-.close,
-.post {
-  margin: 0 10px;
-  height: 30px;
-  width: 130px;
-  border: 1px solid #000000;
-  border-radius: 30px;
-  background-color: rgb(255, 255, 255);
-  font-size: 15px;
-  line-height: 25px;
-  text-align: center;
-  color: rgb(0, 0, 0);
-  cursor: pointer;
 }
 
 .close:hover,
@@ -73,9 +57,22 @@
 }
 
 .foot {
-  border: 0;
   display: flex;
-  justify-content: center;
+  justify-content: center !important;
+  align-items: center;
+}
+
+.close,
+.post {
+  height: 30px;
+  width: 130px;
+  border: 1px solid #000000;
+  border-radius: 30px;
+  background-color: rgb(255, 255, 255);
+  font-size: 15px;
+  text-align: center;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
 }
 
 .text {
@@ -88,4 +85,20 @@
   border-width: 10px;
   font-size: large;
   color: black;
+}
+
+.addText {
+  margin: 0 15%;
+  background-color: rgb(239, 238, 238);
+  width: 70%;
+  height: 100%;
+  border-color: rgb(239, 238, 238);
+  border-radius: 10px;
+  border-width: 10px;
+  font-size: large;
+  color: black;
+}
+
+.addText textarea {
+  width: 100%;
 }
